stop clock designed with proper alignment

--- a/src/Components/ProfilePage/ProfilePage.css
+++ b/src/Components/ProfilePage/ProfilePage.css
@@ -11,6 +11,10 @@
 .header-right {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  width: 80%;
+  justify-content: flex-end;
+  gap: 4px;
 }
 .back-btn > button {
   width: 100%;
@@ -23,7 +27,7 @@
   cursor: pointer;
 }
 .header-right > select {
-  width: 62%;
+  width: 45%;
   font-size: large;
   padding: 0.3rem 0.8rem;
   border-radius: 20px;
@@ -41,4 +45,12 @@
 }
 .details-left > h3 {
   margin: 0;
+}
+@media (max-width: 700px) {
+  .header-right > select {
+    width: 80%;
+  }
+  .profile-header {
+    align-items: flex-start;
+  }
 }
